v3.0: JWT, SEO meta-tags, improved design, hosted MongoDB